--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.14"
   }
 }
